# Base-FastAPI

./: API-Route.py  API-Schemas.txt  README.md  Read Me (Please).txt  ReadMe.txt  main.py  pyproject.toml  session.py  t_descuentos.sql
