[tool.poetry]
name = "base-api"
version = "0.1.0"
description = ""
authors = ["Luis Enrique Gamboa Castro <le.gamboa@gmail.com>"]
readme = "README.md"
packages = [{include = "base_api"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
SQLAlchemy = "^1.4.41"
sqlmodel = "^0.0.8"
pymssql = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
